--- a/home.html
+++ b/home.html
@@ -11,10 +11,8 @@
 
 <body>
     <section>
-        <h2>Bem vindo, escolha uma sala.</h2>
-
-        <p>Room 1</p>
-        <button onclick="sendRegister()">Enter</button>
+        <h2>Escolha uma sala</h2>
+        <button class="button" onclick="sendRegister()">Sala 1</button>
     </section>
 </body>
 
