--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script src="https://accounts.google.com/gsi/client" async></script>
-  <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
-  <script src="/main.js"></script>
+  <script src="./jwt-decode.js"></script>
+  <!-- <script type="text/javascript" src="./phaser.min.js"></script> -->
+  <!-- <script type="module" src="./index.js"></script> -->
+  <script src="./main.js"></script>
+
   <script>window.onload = loadGoogleOauth</script>
   <script>
     setTimeout(() => {
@@ -23,18 +26,17 @@
 </head>
 
 <body>
+  
   <section>
     <h1>
       Roll 6
     </h1>
     <div id="buttonDiv"></div>
-
     <p id="fullName"> </p>
     <img id="picture" />
   </section>
-
-   <p>Click the button to redirect to another page:</p> 
-   <button onclick="window.location.href = 'home.html'">Redirect</button> 
+   
+   <!-- <div name="game-container"></div> -->
 </body>
 
 </html>
