--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <script src="./jwt-decode.js"></script>
   <!-- <script type="text/javascript" src="./phaser.min.js"></script> -->
   <!-- <script type="module" src="./index.js"></script> -->
-  <script src="./main.js"></script>
+  <script src="./google-auth.js"></script>
 
   <script>window.onload = loadGoogleOauth</script>
   <script>
@@ -35,8 +35,6 @@
     <p id="fullName"> </p>
     <img id="picture" />
   </section>
-   
-   <!-- <div name="game-container"></div> -->
 </body>
 
 </html>
