--- a/src/home.html
+++ b/src/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
     <title>Home</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
-    <script src="/main.js"></script>
+    <script src="/google-auth.js"></script>
 
 </head>
 
