--- a/src/sala/index.html
+++ b/src/sala/index.html
@@ -7,12 +7,7 @@
 </head>
 
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.70.0/phaser.min.js"
-        integrity="sha512-DwXZikcH79iPi4Psc6TuG++FNbSxdM9K8GzovSqHbDOsSurmYHdHc/n3+cTTfW4Z6tsOZODyXwcicb+Pw88a0A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="bundle.js"></script>
-    <script type="module" src="game.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script> -->
     <!-- <script type="module" src="chat.js"></script> -->
     <div class="container">
         <div class="webcamFrame" id="video">
@@ -33,11 +28,16 @@
                 </div>
                 <div id="user-input">
                     <input type="text" id="message-input" placeholder="Type your message...">
-                    <button id="send-button" onclick="sendMessage()">Send</button>
+                    <button id="send-button">Send</button>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.70.0/phaser.min.js"
+    integrity="sha512-DwXZikcH79iPi4Psc6TuG++FNbSxdM9K8GzovSqHbDOsSurmYHdHc/n3+cTTfW4Z6tsOZODyXwcicb+Pw88a0A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./bundle.js"></script>
+    <!-- <script type="module" src="./game.js"></script> -->
 </body>
 
 </html>
